[project]
name = "paligemma"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.12"
dependencies = [
    "fire==0.6.0",
    "ipykernel>=6.29.5",
    "numpy==1.26.4",
    "pillow==10.3.0",
    "tokenizers==0.19.1",
    "torch>=2.7.1",
    "torchaudio==2.7.1",
    "torchvision==0.22.1",
    "transformers==4.41.2",
]
